# irc-relay

./: Procfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  deploy.yml
irc_relay/: client.py  server.py
irc_relay/config/: __init__.py  irc.py  listener.py  metrics.py  rate_limit.py  runtime.py  sender.py
irc_relay/http_api/: server.py
irc_relay/listeners/: metrics.py  tcp.py  udp.py
irc_relay/messages/: dispatcher.py  models.py  processor.py
irc_relay/rate_limit/: base.py  sliding_window.py
irc_relay/senders/: irc.py  metrics.py
irc_relay/tests/: test_sliding_window.py
